# scene_generation

./: .gitignore  CMakeLists.txt  build.vs.2022.cmake  scene_generation.sln
camera_params/: CMakeLists.txt  aquarium.cpp  aquarium.h  camera_params.cpp  camera_params.h  camera_params.vcxproj  camera_params.vcxproj.filters  scene.cpp  scene.h
cpp_test/: CMakeLists.txt  cpp_test.cpp  cpp_test.vcxproj  cpp_test.vcxproj.filters
data/: shaders.txt
data/json/: annotation.json  annotation_json.json  generator_params.json
data/json/annotations/: annotation.1.json  annotation.2.json  annotation.3.json  annotation.4.json  annotation.5.json  annotation.6.json  annotation.7.json
data/json/config/: config.0.json  config.1.json  config.2.json  config.json  config1.json
generator/: CMakeLists.txt  aquarium.cpp  aquarium.h  camera.cpp  camera.h  daphnia.cpp  daphnia.h  generator.cpp  generator.h  main.cpp  scene.cpp  scene.h  texture.h  utils.cpp  utils.h
glut_test/: CMakeLists.txt  glut_test.cpp  glut_test.vcxproj  glut_test.vcxproj.filters  jitter.h
imgui_test/: imgui_test.cpp  imgui_test.vcxproj  imgui_test.vcxproj.filters
scene_generation/: CMakeLists.txt  aquarium.cpp  aquarium.h  daphnia.cpp  daphnia.h  scene.cpp  scene.h  scene_generation.cpp  scene_generation.vcxproj  scene_generation.vcxproj.filters
